--- a/styles/blocks/_catalog-products.scss
+++ b/styles/blocks/_catalog-products.scss
@@ -10,6 +10,7 @@
 		display: grid;
 		grid-template-columns: repeat(4, minmax(0, 1fr));
 		gap: 64px 54px;
+		z-index: 4;
 
 		@include desktop {
 			grid-template-columns: repeat(3, minmax(0, 1fr));
